cds-component/alertmanager/alertmanager-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/auth-secret: alertmanager-auth-secret
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
  name: alarm
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
  - host: k8s.alarm
    http:
      paths:
      - backend:
          service:
            name: alertmanager-operated
            port:
              number: 9093
        path: /
        pathType: ImplementationSpecific
  - host: k8s_internal.alarm
    http:
      paths:
      - backend:
          service:
            name: alertmanager-operated
            port:
              number: 9093
        path: /
        pathType: ImplementationSpecific
  tls:
    - hosts:
        - k8s.alarm
        - k8s_internal.alarm
      secretName: monitoring-certs
